--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
         <meta-data
 
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBFES7kaPdaWadCHfowwPe1_25lyHNSq1Y" />
+            android:value="" />
 
         <activity
             android:name=".ListarContactos"
